[package]
name = "wows_armor"
version = "0.1.0"
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.8.1"
flate2 = "1.0.13"
hex = "0.4.2"
reqwest = { version = "0.10.4", features = ["blocking"] }
scraper = "0.11.0"
regex = "1.3.5"
serde_json = "1.0.48"
serde = "1.0"
serde_derive = "1.0.104"
log = "0.4.8"
env_logger = "0.7.1"
derive-new = "0.5.8"
cgmath = { version = "0.17.0", features = ["serde"] }
rand_distr = "0.2.2"
rand = "0.7.3"
bincode = "1.2.1"
